--- a/css/main.css
+++ b/css/main.css
@@ -492,7 +492,12 @@ img {
 }
 
 .works {
-  padding-bottom: 94px;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .works {
+    padding-bottom: 94px;
+  }
 }
 
 .works-list {
