--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,11 +1,17 @@
 
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    @media screen and (min-width:1200px){
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
+    @media screen and (min-width:480px) and (max-width:767px){
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
 }
-
 .clients-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 30px;
