--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -21,4 +21,8 @@ link:focus {
     letter-spacing: 0.03em;
     color: var(--main-color);
     margin-bottom: 50px;
+
+    @media screen and (min-width:480px) and (max-width:767px){
+        margin-bottom: 30px;
+    }
 }
