--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,49 +1,70 @@
 .about {
-    padding: 94px 0px;
-
-    @media screen and (min-width:480px) and (max-width:767px) {
-        padding-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
     }
-    @media screen and (min-width:480) and (max-width:767px){
-        padding-top: 60px;
-    }
-
 }
 .about__us {
 
-    @media screen and (min-width:480px) and (max-width:767px){
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        list-style-type: none;
         gap: 30px;
     }
-    @media screen and (min-width:768px) and (max-width:1200px){
+
+    @media screen and (min-width:768px) and (max-width:1199px){
         display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
 }
 .about__item{
-    @media screen and (min-width:480px) and (max-width: 767px){
+    @media screen and (min-width:320px) and (max-width: 767px){
+        width: 100%;
+    }
+}
+
+.about__item:not(:last-child) {
+     @media screen and (min-width: 320px) and (max-width: 767.5px) {
         margin-bottom: 30px;
     }
-    
 }
+.about__item {
+    @media screen and (min-width: 768px) {
+        width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+    }
+}
+
 .about__us__box {
     border-radius: 4px;
     background: #F5F4FA;
     margin-bottom: 30px;
-
-    @media screen and (min-width:1200px) {
-        justify-content: center;
-        align-items: center;
-        display: flex;
-        padding: 25px 100px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 120px;
+    
+     @media screen and (min-width:1200px) {
+         display: flex;
+         padding: 25px 100px;
     }
      @media screen and (min-width:768px) and (max-width:1200px){
         padding: 25px 142px;
         width: 354px;
-        justify-content: center;
-        align-items: center;
         display: flex;
     }
-    @media screen and (min-width:480px) and (max-width:767px){
+     @media screen and (min-width:480px) and (max-width:767px){
         padding: 25px 190px;
     }
 }
@@ -61,7 +82,6 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--main-color);
-    // width: 270px;
     text-align: left;
     margin-bottom: 10px;
 
@@ -76,10 +96,5 @@
     line-height: calc(24 / 14);
     letter-spacing: 0.03em;
     color: var(--description-color);
-    // width: 270px;
     text-align: left;
-
-    @media screen and (min-width:768px) {
-            width: 354px;
-    }
 }
