--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -10,23 +10,50 @@
     }
 }
 .clients-list {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    gap: 30px;
+    
+    @media screen and (min-width: 480px) and (max-width: 767.5px) {
+        gap: 30px;
+    }
+    
+    @media screen and (min-width: 320px) and (max-width: 479px) {
+        gap: 15px;
+    }
+}
+    
+@media screen and (min-width: 1200px) {
+    .clients__list {
+       gap: 30px;
+    }
+
 }
 
 .clients-link {
-    width: 170px;
-    height: 92px;
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+
+    height: 92px;
+
     color: #AFB1B8;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width:1200px) {
+        width: 170px;
+    }
+    @media screen and (min-width:480px) and (max-width:767px) {
+        width: 210px;
+    }
+    @media screen and (min-width:320px) and (max-width:479px){
+        min-width: 290px;
+    }
 
     &:hover,
     &:focus {
