--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,14 +6,35 @@
 }
 
 .footer-box {
-    display: flex;
-    align-items: baseline;
+
+    @media screen and (min-width:1200px){
+        display: flex;
+        align-items: baseline;
+    }
 }
 .logo-footer {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: calc(31/26);
+    letter-spacing: 0.03em;
     text-decoration: none;
+
+    @media screen and (min-width:480px) and (max-width:767px){
+        font-size: 24px;
+        line-height: calc(28/24);
+        text-align: center;
+    }
 }
 .footer-logo {
-    margin-right: 70px;
+    @media screen and (min-width:1200px){
+        margin-right: 70px;
+    }
+
+    @media screen and (min-width:480px) and (max-width:767px){
+        text-align: center;
+        margin-bottom: 60px;
+    }
 }
 .footer-logo-part {
     font-weight: 700;
@@ -21,40 +42,55 @@
     line-height: calc(31 / 26);
     letter-spacing: 0.03em;
     color: var(--link-color);
+
+    @media screen and (min-width:480px) and (max-width:767px) {
+        font-size: 24px;
+        line-height: calc(28/24);
+        text-align: center;
+    }
 }
 
 .footer-address {
     font-style: normal;
+    @media screen and (min-width:1200px){
     margin-top: 20px;
-}
+    }
 
+    @media screen and (min-width:480px) and (max-width:767px){
+        margin-top: 26px;
+    }
+}
 .footer-list {
     gap: 9px;
+
 }
 
 .footer-address-item {
-    margin-bottom: 9px;
+    margin-bottom: 12px;
 }
 
 .footer-maps-link {
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 14px;
-    line-height: calc(24 / 14);
+    line-height: calc(16 / 14);
     letter-spacing: 0.03em;
     color: var(--link-color);
 }
 
 .footer-email {
-    margin-bottom: 9px;
+     margin-bottom: 12px;
 }
+
 
 .footer-mail-link,
 .footer-tel-link {
+    font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 14px;
-    line-height: calc(24 / 14);
+    line-height: calc(16 / 14);
     letter-spacing: 0.03em;
-    color: var(--description-color);
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-title {
@@ -65,6 +101,22 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--link-color);
+
+    @media screen and (min-width:480px) and (max-width:767px){ 
+        margin-bottom: 20px;
+        text-align: center;
+    }
+}
+.social-list-footer{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media screen and (min-width:480px) and (max-width:767px) {
+        gap: 10px;
+        margin-bottom: 60px;
+    }
 }
 .social-link-footer {
     display: flex;
@@ -92,10 +144,20 @@
     text-transform: uppercase;
     color: var(--link-color);
     margin-bottom: 20px;
+
+    @media screen and (min-width:480px) and (max-width:767px) {
+        text-align: center;
+    }
 }
 
 .footer-form {
-    display: flex;
+    @media screen and (min-width:1200px){
+        display: flex;
+    }
+
+    @media screen and (min-width:480px) and (max-width:767px){
+        text-align: center;
+    }
 }
 
 .footer-input-subscription {
@@ -107,6 +169,11 @@
     border-radius: 4px;
     margin-right: 12px;
     padding: 15px 16px;
+
+    @media screen and (min-width:480px) and (max-width:767px) {
+        margin-bottom: 20px;
+        width: 450px;
+    }
 }
 
 
