--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -16,13 +16,17 @@
     background-color: var(--accent-color);
     font-weight: 700;
     font-size: 16px;
-    line-height: 30px;
+    line-height: calc(30/16);
     padding: 10px 32px;
     border-radius: 4px;
     letter-spacing: 0.06em;
 
-    @media screen and (min-width: 480px) and (max-width: 767.5px) {
-    padding: 10px 24px;
+    @media screen and (min-width: 1200px){
+        padding: 10px 32px;
+    }
+
+    @media screen and (min-width: 480px) and (max-width:1199px) {
+        padding: 10px 24px;
     }
 }
 .footer-btn {
