--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,11 +1,9 @@
 /*contacts*/
 .contacts__link {
+    display: flex;
     font-weight: 500;
-    font-size: 14px;
-    line-height: calc(16 / 14);
     letter-spacing: 0.02em;
     color: var(--description-color);
-    display: flex;
     align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -13,10 +11,24 @@
     &:focus {
         color: var(--accent-color);
     }
+
+    @media screen and (min-width:1200px){ 
+        font-size: 14px;
+        line-height: calc(16 / 14);
+    }
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        font-size: 12px;
+        line-height: calc(14/12);
+        margin-bottom: 10px;
+
+    }
 }
 
 .mail__link {
-    margin-right: 50px;
+    @media screen and (min-width:1200px){
+        margin-right: 50px;
+    }
 }
 
 .small__icon {
