--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,6 +3,7 @@
     background-color: #2f303a;
     padding-top: 60px;
     padding-bottom: 60px;
+    width: 100%;
 }
 
 .footer-box {
@@ -10,6 +11,12 @@
     @media screen and (min-width:1200px){
         display: flex;
         align-items: baseline;
+    }
+
+    @media screen and (min-width:768px){
+        width: 768px;
+        justify-content: space-around;
+        display: flex;
     }
 }
 .logo-footer {
@@ -19,6 +26,10 @@
     line-height: calc(31/26);
     letter-spacing: 0.03em;
     text-decoration: none;
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        padding-left: 115px;
+    }
 
     @media screen and (min-width:480px) and (max-width:767px){
         font-size: 24px;
@@ -52,8 +63,13 @@
 
 .footer-address {
     font-style: normal;
+
     @media screen and (min-width:1200px){
-    margin-top: 20px;
+        margin-top: 20px;
+        display: flex;
+    }
+    @media screen and (min-width:768px) and (max-width:1199px){
+        display: flex;
     }
 
     @media screen and (min-width:480px) and (max-width:767px){
@@ -61,12 +77,18 @@
     }
 }
 .footer-list {
-    gap: 9px;
+    @media screen and (min-width:767px) and (max-width:1199px){
+        flex-direction: column;
+    }
 
 }
 
 .footer-address-item {
     margin-bottom: 12px;
+
+    @media screen and (min-width:767px) and (max-width:1199px){
+        margin-top: 28px;
+    }
 }
 
 .footer-maps-link {
@@ -112,9 +134,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
 
     @media screen and (min-width:480px) and (max-width:767px) {
-        gap: 10px;
         margin-bottom: 60px;
     }
 }
@@ -135,7 +157,6 @@
         background-color: var(--accent-color);
     }
 }
-
 .footer-input-text {
     font-weight: 700;
     font-size: 14px;
@@ -149,15 +170,40 @@
         text-align: center;
     }
 }
-
-.footer-form {
-    @media screen and (min-width:1200px){
+.footer-input{
+    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
         display: flex;
+        flex-direction: column;
+        align-items: center;
     }
-
-    @media screen and (min-width:480px) and (max-width:767px){
+}
+.footer-form {
+    display: flex;
+    align-items: baseline;
+    max-width: 1200px;
+    
+    @media screen and (min-width: 320px) and (max-width: 767.5px) {
+        flex-direction: column;
+        align-items: center;
         text-align: center;
     }
+    @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+.footer-subscription-label{
+    display: flex;
+    
+        @media screen and (min-width: 320px) and (max-width: 767.5px) {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+    
+        @media screen and (min-width: 768px) and (max-width: 1199.5px) {
+            flex-direction: column;
+            align-items: center;
+        }
 }
 
 .footer-input-subscription {
