--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,14 +1,31 @@
 
 .logo {
     font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: calc(31 / 26);
     letter-spacing: 0.03em;
+    font-weight: 700;
+
+        @media screen and (min-width:1200px){
+        font-size: 26px;
+        line-height: calc(31 / 26);
+    }
+    
+        @media screen and (min-width:320px) and (max-width:1199px){
+            font-size: 24px;
+            line-height: calc(28/24);
+        }
+
 }
 
 .logo__header {
-    margin-right: 93px;
+    @media screen and (min-width:1200px) {
+        margin-right: 93px;
+    }
+    @media screen and (min-width:768px) and (max-width:1199px){
+        margin-right: 88px;
+        padding-top: 30px;
+        padding-bottom: 22px;
+    }
+    
 }
 
 .first-part {
