--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -30,6 +30,10 @@
 
     border-radius: 2px;
     background-color: var(--accent-color);
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        bottom: -32px;
+    }
 }
 
 .nav__item:not(:last-child) {
