--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,6 +1,7 @@
 .works {
+    @media screen and (min-width:320px) and (max-width:1199px){
     display: none;
-
+    }
     @media screen and (min-width:1200px){
     padding-bottom: 94px;
     }
