--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,7 +3,6 @@
     background-color: #2f303a;
     padding-top: 60px;
     padding-bottom: 60px;
-    width: 100%;
 }
 
 .footer-box {
@@ -17,6 +16,7 @@
         width: 768px;
         justify-content: space-around;
         display: flex;
+        flex-wrap: wrap;
     }
 }
 .logo-footer {
@@ -28,10 +28,11 @@
     text-decoration: none;
 
     @media screen and (min-width:768px) and (max-width:1199px){
-        padding-left: 115px;
+        justify-content: center;
+        display: flex;
     }
 
-    @media screen and (min-width:480px) and (max-width:767px){
+    @media screen and (min-width:480px) and (max-width:1199px){
         font-size: 24px;
         line-height: calc(28/24);
         text-align: center;
@@ -124,6 +125,11 @@
     text-transform: uppercase;
     color: var(--link-color);
 
+    @media screen and (min-width:768px) and (max-width:1199px){
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
     @media screen and (min-width:480px) and (max-width:767px){ 
         margin-bottom: 20px;
         text-align: center;
@@ -175,6 +181,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-top: 60px;
     }
 }
 .footer-form {
@@ -215,6 +222,10 @@
     border-radius: 4px;
     margin-right: 12px;
     padding: 15px 16px;
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        margin-bottom: 20px;
+    }
 
     @media screen and (min-width:480px) and (max-width:767px) {
         margin-bottom: 20px;
