--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -28,6 +28,10 @@
     border-radius: 4px;
     background-color: var(--link-color);
     padding: 40px;
+
+    @media screen and (min-width:480px) and (max-width:1199px){
+      width: 450px;  
+    }
 }
 
 .backdrop.is-hidden {
@@ -47,6 +51,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        line-height: calc(30/20);
+    }
 }
 
 label {
@@ -153,6 +161,11 @@ label {
     line-height: calc(24/14);
     letter-spacing: 0.03em;
     color: var(--description-color);
+
+    @media screen and (min-width:320px) and (max-width:1199px) {
+        font-size: 12px;
+        line-height: calc(14/12);
+    }
 }
 
 .form-text-agreement {
@@ -171,5 +184,10 @@ label {
     letter-spacing: 0.03em;
     text-decoration-line: underline;
     color: var(--accent-color);
+
+    @media screen and (min-width:768px) and (max-width:1199px){
+        font-size: 12px;
+        line-height: calc(14/12);
+    }
 }
 
